--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             Pliki
         </a>
 
-        <a href="http://127.0.0.1:5500/programy.html" class="więcej" id="więcej">
+        <a src="programy.html" class="więcej" id="więcej">
             Programy
         </a>
     </header>
