--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                 <input type="checkbox" id="checkbox" name="checkbox" onclick="zmien_kolor();"> 
             </div>
             <div id="posun" class="pakistan">
-                <a href="http://127.0.0.1:5500/autorstrona.html" target="_blank" class="Dropdown" alt="Autor" id="posun1">
+                <a href="autorstrona.html" target="_blank" class="Dropdown" alt="Autor" id="posun1">
                     O autorze
                 </a>
             </div>
             </div>
         </div>
 
-        <a href="http://127.0.0.1:5500/plikipobranie.html" class="pliki" id="pliki">
+        <a href="plikipobranie.html" class="pliki" id="pliki">
             Pliki
         </a>
 
