--- a/autorstrona.html
+++ b/autorstrona.html
@@ -18,11 +18,11 @@
 
             <div>
                 <label>&#x2022;</label>
-                <a href="http://127.0.0.1:5500/cos.html">Strona główna</a>
+                <a href="cos.html">Strona główna</a>
             </div>
             <div>
                 <label>&#x2022;</label>
-                <a href="http://127.0.0.1:5500/programy.html">Programy</a>
+                <a href="programy.html">Programy</a>
             </div>
         </div>
 
