--- a/autorstrona.html
+++ b/autorstrona.html
@@ -18,7 +18,7 @@
 
             <div>
                 <label>&#x2022;</label>
-                <a href="cos.html">Strona główna</a>
+                <a href="index.html">Strona główna</a>
             </div>
             <div>
                 <label>&#x2022;</label>
