--- a/programy.html
+++ b/programy.html
@@ -8,20 +8,17 @@
 <body>
     <h1 style="text-align: center; font-size: 40px;">Różne programy</h1>
     <div class="container">
-        <a href="http://127.0.0.1:5500/programms/kalkulator/kalkulator.html" class="grid-items">
+        <a href="/programms/kalkulator/kalkulator.html" class="grid-items">
             Kalkulator
         </a>
-        <a href="http://127.0.0.1:5500/programms/fibonacci/fibonacci.html" class="grid-items">
+        <a href="/programms/fibonacci/fibonacci.html" class="grid-items">
             Ciąg Fibonacciego
         </a>
-        <a href="http://127.0.0.1:5500/programms/Pesel/pesel.html" class="grid-items">
+        <a href="/programms/Pesel/pesel.html" class="grid-items">
             Obliczanie peselu
         </a>
-        <a href="http://127.0.0.1:5500/programms/Picipolo/PiciPolo.html" class="grid-items">
+        <a href="/programms/Picipolo/PiciPolo.html" class="grid-items">
             Pici polo
-        </a>
-        <a href="#" class="grid-items">
-            Mój ziomo artysta
         </a>
     </div>
 </body>
