--- a/programy.html
+++ b/programy.html
@@ -8,16 +8,16 @@
 <body>
     <h1 style="text-align: center; font-size: 40px;">Różne programy</h1>
     <div class="container">
-        <a href="/programms/kalkulator/kalkulator.html" class="grid-items">
+        <a href="programms/kalkulator/kalkulator.html" class="grid-items">
             Kalkulator
         </a>
-        <a href="/programms/fibonacci/fibonacci.html" class="grid-items">
+        <a href="programms/fibonacci/fibonacci.html" class="grid-items">
             Ciąg Fibonacciego
         </a>
-        <a href="/programms/Pesel/pesel.html" class="grid-items">
+        <a href="programms/Pesel/pesel.html" class="grid-items">
             Obliczanie peselu
         </a>
-        <a href="/programms/Picipolo/PiciPolo.html" class="grid-items">
+        <a href="programms/Picipolo/PiciPolo.html" class="grid-items">
             Pici polo
         </a>
     </div>
