--- a/programms/Picipolo/PiciPolo.html
+++ b/programms/Picipolo/PiciPolo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pici polo</title>
     <link rel="stylesheet" href="PiciPolo.css">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/f/f7/Citizen_SLD-100NR_calculator.jpg">
 </head>
 <body>
     <div class="container">
