--- a/programms/kalkulator/kalkulator.html
+++ b/programms/kalkulator/kalkulator.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bardzo primitywny kalkulator</title>
     <link rel="stylesheet" href="kalkulator.css">
+    <link rel="icon" href="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/4477657/calculator-clipart-md.png">
 </head>
 <body>
     <div class="container">
