--- a/programms/fibonacci/fibonacci.html
+++ b/programms/fibonacci/fibonacci.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciąg Fibonacciego</title>
     <link rel="stylesheet" href="fibonacci.css">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/b/bf/PascalTriangleFibanacci.svg">
 
 </head>
 <body>
